# Vega_questionnaire_review_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: injection_test.json  sample_input.json
prompts/: reviewer_system.txt
src/: config.py  decision_engine.py  feedback.py  llm_reviewer.py  prompt_builder.py  rules.py  sanitiser.py  schemas.py
tests/: test_integration.py  test_rules.py  test_sanitiser.py  test_schemas.py
